--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+    "name": "Logo-Creator-SVG",
+    "version": 3,
+    "description": "Command line tool used to create a basic logo in the form of a SVG file",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest"
+    },
+    "private": true,
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
     "dependencies": {
-        "inquirer": "^9.2.0",
-        "jest": "^29.5.0"
+     "inquirer": "^9.2.0",
+    },
+"devDependencies": {
+    "jest": "^29.5.0"
     }
 }
