--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-     "inquirer": "^9.2.0",
+     "inquirer": "^9.2.0"
     },
 "devDependencies": {
     "jest": "^29.5.0"
